apply plugin: 'com.android.application'
// Firebase crashlytics
apply plugin: 'com.google.firebase.crashlytics'
apply plugin: 'com.google.gms.google-services'
apply plugin: 'kotlin-android'
apply plugin: 'kotlin-android-extensions'

// Initialise the keystorePropertiesFile
def keystorePropertiesFile = rootProject.file("keystore.properties")
def keystoreProperties = new Properties()
// Load keystore.properties file into the keystoreProperties object.
keystoreProperties.load(new FileInputStream(keystorePropertiesFile))

android {
    signingConfigs {
        config {
            keyAlias keystoreProperties['keyAlias']
            keyPassword keystoreProperties['keyPassword']
            storeFile file(keystoreProperties['storeFile'])
            storePassword keystoreProperties['storePassword']
        }
    }
    compileSdk 34
    defaultConfig {
        applicationId "me.anky.connectid"
        minSdkVersion 21
        targetSdkVersion 34
        multiDexEnabled true
        versionCode 18
        versionName "2.4.1"
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    tasks.withType(JavaCompile).configureEach{
        options.fork = true
        options.forkOptions.jvmArgs +=[
                '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED']
    }

    buildTypes {
        release {
            minifyEnabled true
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
            signingConfig signingConfigs.config
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    namespace 'me.anky.connectid'
    lint {
        abortOnError false
        checkReleaseBuilds false
    }
}

repositories {
    maven {
        url "https://s3.amazonaws.com/repo.commonsware.com"
    }
}

ext {
    supportLibVersion = '1.7.0'
    firebase = '17.0.0'
}

dependencies {
    def core_version = "1.7.0"
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    implementation "androidx.core:core:$core_version"
    implementation "androidx.appcompat:appcompat:${supportLibVersion}"
    implementation "com.google.android.material:material:1.0.0"
    implementation "androidx.recyclerview:recyclerview:1.0.0"
    implementation "androidx.legacy:legacy-support-v4:1.0.0"
    implementation 'com.github.bumptech.glide:glide:4.7.1'
    implementation 'com.google.firebase:firebase-crashlytics:17.2.1'
    implementation 'com.google.firebase:firebase-analytics:17.5.0'
    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
    implementation 'net.simonvt.schematic:schematic:0.7.0'
    implementation 'com.jakewharton:butterknife:10.1.0'
    implementation 'com.facebook.stetho:stetho:1.5.0'
    testImplementation "junit:junit:4.12"
    annotationProcessor 'net.simonvt.schematic:schematic-compiler:0.7.0'
    annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
    implementation 'com.commonsware.cwac:provider:0.5.0'
    //implementation 'com.theartofdev.edmodo:android-image-cropper:2.7.+'
    implementation("com.vanniktech:android-image-cropper:4.6.0")
    implementation 'com.androidsx:rate-me:4.0.3'
    implementation 'org.greenrobot:eventbus:3.0.0'
    // Firebase crashlytics

    // Firebase
    implementation "com.google.firebase:firebase-core:${firebase}"
    implementation "com.google.firebase:firebase-analytics:${firebase}"
    implementation "com.google.firebase:firebase-messaging:19.0.1"
    implementation "com.google.firebase:firebase-invites:${firebase}"
    implementation 'com.google.android.gms:play-services-ads:18.0.0'
    implementation platform('com.google.firebase:firebase-bom:31.2.0')

    // RxJava
    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
    implementation 'io.reactivex.rxjava2:rxjava:2.1.0'

    // Dagger 2
    implementation 'com.google.dagger:dagger:2.35'
    annotationProcessor "com.google.dagger:dagger-compiler:2.35"

    implementation group: 'com.opencsv', name: 'opencsv', version: '4.1'

    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
}
apply plugin: 'com.google.gms.google-services'
